scripts/nullaway/nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8.txt
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCGenerator.java:7: error: [NullAway] @NonNull static field variableList not initialized
    private static ArrayList<VariableInformation> variableList;
                                                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperPostParser.java:9: error: [NullAway] @NonNull field parseTree not initialized
    private ParseTree parseTree;
                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCompiler.java:24: error: [NullAway] @NonNull field lexer not initialized
    private EsperLexer lexer;
                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCompiler.java:26: error: [NullAway] @NonNull field parseRoot not initialized
    private ParseTree parseRoot;
                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCompiler.java:28: error: [NullAway] @NonNull field variableList not initialized
    private ArrayList<VariableInformation> variableList;
                                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:119: error: [NullAway] @NonNull field EsperParser$program_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:159: error: [NullAway] @NonNull field EsperParser$statements_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:221: error: [NullAway] @NonNull field EsperParser$statement_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:401: error: [NullAway] @NonNull field EsperParser$expr_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:512: error: [NullAway] @NonNull field EsperParser$term_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:594: error: [NullAway] @NonNull field EsperParser$factor_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:640: error: [NullAway] @NonNull field EsperParser$declaration_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:690: error: [NullAway] @NonNull field EsperParser$assign_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:740: error: [NullAway] @NonNull field EsperParser$ifthenelse_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:829: error: [NullAway] @NonNull field EsperParser$if__return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:879: error: [NullAway] @NonNull field EsperParser$elseif_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:924: error: [NullAway] @NonNull field EsperParser$else__return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:969: error: [NullAway] @NonNull field EsperParser$condition_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1019: error: [NullAway] @NonNull field EsperParser$conditionaloperator_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1065: error: [NullAway] @NonNull field EsperParser$print_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1110: error: [NullAway] @NonNull field EsperParser$vartype_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1156: error: [NullAway] @NonNull field EsperParser$forloop_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1201: error: [NullAway] @NonNull field EsperParser$for__return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1251: error: [NullAway] @NonNull field EsperParser$forgap_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1308: error: [NullAway] @NonNull field EsperParser$whileloop_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1353: error: [NullAway] @NonNull field EsperParser$while__return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
26 errors
